--- a/my-path-mapping/app/views/maps/index.html.erb
+++ b/my-path-mapping/app/views/maps/index.html.erb
@@ -34,7 +34,7 @@
 //         },
 //         geometry: {
 //             type: 'Point',
-//             coordinates: [<%= address.longitude %>, <%= address.latitude %>]
+//             coordinates: [-122.4222929,37.7651455]
 //         }
 //     },
 //     {
