Add front end css and bootstrap for zones and some of the address

--- a/my-path-mapping/app/views/addresses/index.html.erb
+++ b/my-path-mapping/app/views/addresses/index.html.erb
@@ -1,4 +1,11 @@
+<div class="wrapper">
 <p id="notice"><%= notice %></p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4">
+
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-8">
 
 <h1>Listing Addresses</h1>
 
@@ -35,5 +42,9 @@
 </table>
 
 <br>
+</div>
+</div>
+</div>
+</div>
 
 <%= link_to 'New Address', new_address_path %>
