--- a/my-path-mapping/app/views/addresses/_form.html.erb
+++ b/my-path-mapping/app/views/addresses/_form.html.erb
@@ -1,3 +1,12 @@
+<div class="wrapper">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-4">
+
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-8">
+        <div class="panel panel-default">
+          <div class="panel-heading">Create a new address</div>
 <%= form_for(@address) do |f| %>
   <% if @address.errors.any? %>
     <div id="error_explanation">
@@ -13,33 +22,39 @@
 
   <div class="field">
     <%= f.label :street %><br>
-    <%= f.text_field :street %>
+    <%= f.text_field :street, :class => 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :city %><br>
-    <%= f.text_field :city %>
+    <%= f.text_field :city, :class => 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :state %><br>
-    <%= f.text_field :state %>
+    <%= f.text_field :state, :class => 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :zip %><br>
-    <%= f.number_field :zip %>
+    <%= f.number_field :zip, :class => 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :type %><br>
-    <%= f.text_field :type %>
+    <%= f.text_field :type, :class => 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :latitude %><br>
-    <%= f.text_field :latitude %>
+    <%= f.text_field :latitude, :class => 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :longitude %><br>
-    <%= f.text_field :longitude %>
+    <%= f.text_field :longitude, :class => 'form-control' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => 'btn btn-default'%>
   </div>
 <% end %>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
