--- a/my-path-mapping/app/views/layouts/application.html.erb
+++ b/my-path-mapping/app/views/layouts/application.html.erb
@@ -7,8 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div id="wrapper">
+    <nav class="navbar navbar-default navbar-static-top">
+      <div class="page-header">
+      </div>
+    </nav>
 
 <%= yield %>
 
+  </div>
 </body>
 </html>
