--- a/my-path-mapping/app/views/zones/_form.html.erb
+++ b/my-path-mapping/app/views/zones/_form.html.erb
@@ -1,29 +1,44 @@
-<%= form_for(@zone) do |f| %>
-  <% if @zone.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@zone.errors.count, "error") %> prohibited this zone from being saved:</h2>
+<div class="wrapper">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-4">
 
-      <ul>
-      <% @zone.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-8">
+  <div class="field">
+  <%= form_for @zone, :html=>{:class=> "panel panel-default"} do |f| %>
+    <div class="panel-heading">Create a new zone</div>
+    <% if @zone.errors.any? %>
+      <div id="error_explanation">
+          <h2><%= pluralize(@zone.errors.count, "error") %> prohibited this zone from being saved:</h2>
+
+          <ul>
+          <% @zone.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+            <div class="form-group">
+              <%= f.label :name %><br>
+              <%= f.text_field :name, :class => 'form-control' %>
+            </div>
+            <div>
+              <%= f.label :description %><br>
+              <%= f.text_field :description, :class => 'form-control' %>
+            </div>
+            <div class="field">
+              <%= f.label :city %><br>
+              <%= f.text_field :city, :class => 'form-control' %>
+            </div>
+            <div class="actions">
+              <%= f.submit :class => 'btn btn-default'%>
+            </div>
+          </div>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
-  </div>
-  <div class="field">
-    <%= f.label :city %><br>
-    <%= f.text_field :city %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
 <% end %>
+</div>
