create spans and add logo to header

--- a/my-path-mapping/app/views/layouts/application.html.erb
+++ b/my-path-mapping/app/views/layouts/application.html.erb
@@ -8,9 +8,11 @@
 </head>
 <body>
   <div id="wrapper">
-    <nav class="navbar navbar-default navbar-static-top">
-      <div class="page-header">
-      </div>
+    <nav class="navbar navbar-default navbar-static-top bg-gray">
+      <div class="page-header  flex-center">
+        <a href="/"><img src="/assets/logo2.png"></a>
+     </div>
+
     </nav>
 
 <%= yield %>
