--- a/my-path-mapping/app/views/zones/index.html.erb
+++ b/my-path-mapping/app/views/zones/index.html.erb
@@ -1,10 +1,13 @@
-<div class="wrapper">
+<div class="wrapper debug">
 
+  <div class="span-4-d debug h-45 col">
+    <p>description</p>
+  </div>
 
-
-      <div class="col-xs-12 col-sm-6 col-md-8 debug ml">
+    <!-- start of listings -->
+      <div class="col-xs-12 col-sm-6 col-md-8 debug col span-8-d h-45">
         <h1 class="ta-cen">Listing Zones</h1>
-        <div class=""><%= link_to 'New Zone', new_zone_path, :class => 'btn btn-primary btn-lg btn-block' %></div>
+        <div class=""><%= link_to 'New Zone', new_zone_path, :class => 'btn btn-primary btn-lg btn-block ' %></div>
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="table-responsive">
@@ -35,7 +38,8 @@
     </div>
   </div>
 </div>
-</div><!-- zone table end -->
+</div>
+<!-- zone table end -->
 
 
 
