--- a/my-path-mapping/app/views/zones/index.html.erb
+++ b/my-path-mapping/app/views/zones/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="span-4-d debug h-45 col">
     <p>description</p>
-  </div>
+  </div>g
 
     <!-- start of listings -->
       <div class="col-xs-12 col-sm-6 col-md-8 debug col span-8-d h-45">
