--- a/my-path-mapping/app/views/maps/index.html.erb
+++ b/my-path-mapping/app/views/maps/index.html.erb
@@ -2,13 +2,25 @@
 <html>
 <head>
   <meta charset=utf-8 />
-  <title>A simple map</title>
+  <title>My Path Mapping</title>
 
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <script src='https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.js'></script>
   <link href='https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.css' rel='stylesheet' />
+<style>
+  body {
+    margin:0;
+    padding:0;
+  }
 
-
+  #map {
+    position:absolute;
+    top:0;
+    bottom:0;
+    width:100%;
+    height: 100%;
+  }
+</style>
 </head>
 <body>
 
@@ -32,11 +44,15 @@
           title: "testing",
           address: "<%=address.address%>",
           'marker-size': 'large',
-          'marker-color': '#BE9A6B',
-          'marker-symbol': 'star'
+          'marker-color': <% if address.entity_type == "Bank" %>"#0000FF"<% elsif address.entity_type == "Credit Union" %>"#00FF00"<% else %>"#FF0000"<% end %>,
+          'marker-symbol': <% if address.entity_type == "Bank" %>"b"<% elsif address.entity_type == "Credit Union" %>"u"<% else %>"c"<% end %>,
         }
       }<% if address != @addresses[-1] %>,<% end %>
    <% end %>]
+
+   // #FF0000  red  cash
+   // #0000FF  blue bank
+   // #00FF00  green credit union
 
 console.log(geojson)
 
