--- a/my-path-mapping/app/views/maps/index.html.erb
+++ b/my-path-mapping/app/views/maps/index.html.erb
@@ -15,10 +15,10 @@
 
   #map {
     position:absolute;
-    top:0;
+    top:22%;
     bottom:0;
     width:100%;
-    height: 100%;
+    height: 80%;
   }
 </style>
 </head>
@@ -29,7 +29,7 @@
 
   L.mapbox.accessToken = 'pk.eyJ1IjoibXlwYXRobWFwIiwiYSI6ImNpZmJsazE1NTJtbWRyc203azFteDZjM3MifQ.4bHjuFSY_Y-xvCN4V4nZeg';
   var map = L.mapbox.map('map', 'mypathmap.nk4i9p5e')
-  .setView([37.7577,-122.4376], 13);
+  .setView([37.7577,-122.4376], 12);
 
   var myLayer = L.mapbox.featureLayer().addTo(map);
 
