--- a/my-path-mapping/app/views/addresses/_form.html.erb
+++ b/my-path-mapping/app/views/addresses/_form.html.erb
@@ -21,32 +21,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :street %><br>
-    <%= f.text_field :street, :class => 'form-control' %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name, :class => 'form-control' %>
   </div>
   <div class="field">
-    <%= f.label :city %><br>
-    <%= f.text_field :city, :class => 'form-control' %>
+    <%= f.label :address %><br>
+    <%= f.text_field :address, :class => 'form-control' %>
   </div>
   <div class="field">
-    <%= f.label :state %><br>
-    <%= f.text_field :state, :class => 'form-control' %>
-  </div>
-  <div class="field">
-    <%= f.label :zip %><br>
-    <%= f.number_field :zip, :class => 'form-control' %>
-  </div>
-  <div class="field">
-    <%= f.label :type %><br>
-    <%= f.text_field :type, :class => 'form-control' %>
-  </div>
-  <div class="field">
-    <%= f.label :latitude %><br>
-    <%= f.text_field :latitude, :class => 'form-control' %>
-  </div>
-  <div class="field">
-    <%= f.label :longitude %><br>
-    <%= f.text_field :longitude, :class => 'form-control' %>
+    <%= f.label :entity_type %><br>
+    <%= f.text_field :entity_type, :class => 'form-control' %>
   </div>
   <div class="actions">
     <%= f.submit :class => 'btn btn-default'%>
