--- a/my-path-mapping/app/views/addresses/index.html.erb
+++ b/my-path-mapping/app/views/addresses/index.html.erb
@@ -1,24 +1,17 @@
-<div class="wrapper">
+<div class="wrapper debug">
+
+  <div class="span-4-d debug h-45 col">
+    <h1 class="ta-cen">Listing Address</h1>
+  </div>
 <p id="notice"><%= notice %></p>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4">
-
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-8">
-
-<h1>Listing Addresses</h1>
-
+<!--start of list--->
+<div class="col-xs-12 col-sm-6 col-md-8 debug col span-8-d h-45">
 <table>
   <thead>
     <tr>
-      <th>Street</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Zip</th>
+      <th>Name</th>
+      <th>Address</th>
       <th>Type</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,13 +19,9 @@
   <tbody>
     <% @addresses.each do |address| %>
       <tr>
-        <td><%= address.street %></td>
-        <td><%= address.city %></td>
-        <td><%= address.state %></td>
-        <td><%= address.zip %></td>
-        <td><%= address.type %></td>
-        <td><%= address.latitude %></td>
-        <td><%= address.longitude %></td>
+        <td><%= address.name %></td>
+        <td><%= address.address %></td>
+        <td><%= address.entity_type %></td>
         <td><%= link_to 'Show', address %></td>
         <td><%= link_to 'Edit', edit_address_path(address) %></td>
         <td><%= link_to 'Destroy', address, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -42,8 +31,6 @@
 </table>
 
 <br>
-</div>
-</div>
 </div>
 </div>
 
