format new zone page

--- a/my-path-mapping/app/assets/stylesheets/main.css.scss
+++ b/my-path-mapping/app/assets/stylesheets/main.css.scss
@@ -1,8 +1,8 @@
-.debugger {
+.debuggerx {
   // border: red 1px solid;
 }
 
-.debug {border: 1px red solid;}
+.dexbug {border: 1px red solid;}
 .center {
    margin-left: auto;
    margin-right: auto;
@@ -198,6 +198,8 @@
 .mt--3 {margin-top: -3em;}
 .mt--2 {margin-top: -2em;}
 .mt--1 {margin-top: -1em;}
+.mt--05 {margin-top: -0.1em;}
+
 .mt-1 {margin-top: 1em;}
 .mt-2 {margin-top: 2em;}
 .mt-3 {margin-top: 3em;}
@@ -511,4 +513,4 @@ box-shadow: -1px 2px 5px 1px rgba(0,0,0,0.75);
     .gutters-d .span-12-d { width: 100%; }
 }
 
-.debug { border: solid 1px red; }
+
