--- a/my-path-mapping/app/views/zones/index.html.erb
+++ b/my-path-mapping/app/views/zones/index.html.erb
@@ -1,8 +1,8 @@
 <div class="wrapper debug">
 
-  <div class="span-4-d debug h-45 col">
+  <div class="span-4-d debug h-45 col bd-1b">
     <p>description</p>
-  </div>g
+  </div>
 
     <!-- start of listings -->
       <div class="col-xs-12 col-sm-6 col-md-8 debug col span-8-d h-45">
