--- a/my-path-mapping/app/views/zones/new.html.erb
+++ b/my-path-mapping/app/views/zones/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Zone</h1>
+<div class="debug h-45">
+  <%= render 'form' %>
+</div>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', zones_path %>
+
+
