--- a/my-path-mapping/app/views/addresses/index.html.erb
+++ b/my-path-mapping/app/views/addresses/index.html.erb
@@ -1,37 +1,52 @@
 <div class="wrapper debug">
-
   <div class="span-4-d debug h-45 col">
-    <h1 class="ta-cen">Listing Address</h1>
   </div>
-<p id="notice"><%= notice %></p>
-<!--start of list--->
-<div class="col-xs-12 col-sm-6 col-md-8 debug col span-8-d h-45">
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Type</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <p id="notice"><%= notice %></p>
 
-  <tbody>
-    <% @addresses.each do |address| %>
-      <tr>
-        <td><%= address.name %></td>
-        <td><%= address.address %></td>
-        <td><%= address.entity_type %></td>
-        <td><%= link_to 'Show', address %></td>
-        <td><%= link_to 'Edit', edit_address_path(address) %></td>
-        <td><%= link_to 'Destroy', address, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <!--start of list--->
+      <div class="col-xs-12 col-sm-6 col-md-8 debug col span-8-d h-45">
+          <h1 class="ta-cen">Listing Address</h1>
+              <div class=""><%= link_to 'New Address', new_address_path, :class => 'btn btn-primary btn-lg btn-block ' %></div>
 
-<br>
+              <!-- panel starts -->
+                  <div class="panel panel-default">
+                    <div class="panel-body">
+
+                      <!-- table starts -->
+                          <div class="table-responsive">
+                            <table class="table">
+
+                                  <thead>
+                                    <tr>
+                                      <th>Name</th>
+                                      <th>Address</th>
+                                      <th>Type</th>
+                                      <th colspan="3"></th>
+                                    </tr>
+                                  </thead>
+
+                                  <tbody>
+                                    <% @addresses.each do |address| %>
+                                      <tr>
+                                        <td><%= address.name %></td>
+                                        <td><%= address.address %></td>
+                                        <td><%= address.entity_type %></td>
+                                        <td><%= link_to 'Show', address, :class => 'btn btn-default'  %></td>
+                                        <td><%= link_to 'Edit', edit_address_path(address), :class => 'btn btn-default'  %></td>
+                                        <td><%= link_to 'Destroy', address, :class => 'btn btn-default' , method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                                      </tr>
+                                    <% end %>
+                                  </tbody>
+                              </table>
+
+                            <br>
+                          </div>
+                          <!-- table ends -->
+              </div>
+            </div>
+            <!-- panel ends -->
+      </div>
 </div>
-</div>
+<!-- wrapper ends -->
 
 <%= link_to 'New Address', new_address_path %>
