--- a/my-path-mapping/app/views/addresses/show.html.erb
+++ b/my-path-mapping/app/views/addresses/show.html.erb
@@ -1,31 +1,27 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Street:</strong>
-  <%= @address.street %>
-</p>
-
-<p>
-  <strong>City:</strong>
-  <%= @address.city %>
-</p>
-
-<p>
-  <strong>State:</strong>
-  <%= @address.state %>
-</p>
-
-<p>
-  <strong>Zip:</strong>
-  <%= @address.zip %>
+  <strong>Address:</strong>
+  <%= @address.address %>
 </p>
 
 <p>
   <strong>Type:</strong>
-  <%= @address.type %>
+  <%= @address.entity_type %>
 </p>
 
 <p>
+  <strong>Description:</strong>
+  <%= @address.description %>
+</p>
+
+<p>
+  <strong>Service:</strong>
+  <%= @address.service %>
+</p>
+
+
+<!-- <p>
   <strong>Latitude:</strong>
   <%= @address.latitude %>
 </p>
@@ -33,7 +29,7 @@
 <p>
   <strong>Longitude:</strong>
   <%= @address.longitude %>
-</p>
+</p> -->
 
 <%= link_to 'Edit', edit_address_path(@address) %> |
 <%= link_to 'Back', addresses_path %>
