--- a/my-path-mapping/app/assets/stylesheets/main.css.scss
+++ b/my-path-mapping/app/assets/stylesheets/main.css.scss
@@ -2,7 +2,7 @@
   // border: red 1px solid;
 }
 
-.dexbug {border: 1px red solid;}
+.debug {border: 1px red solid;}
 .center {
    margin-left: auto;
    margin-right: auto;
@@ -106,7 +106,7 @@
 .bg-gray {background-color: #ecf0f1; }
 .bg-silver {background-color: #BDC3C7; }
 .bg-yellow {background-color: #F5AB35; }
-.bg-green {background-color: #0F710E; }
+.bg-green {background-color: #1C731B; }
 .bg-white { background-color: rgba(255, 255, 255, 0.75); }
 .bg-black { background-color: rgba(0, 0, 0, 0.7); }
 .bg-black { background-color: rgba(0, 0, 0, 0.7); }
