--- a/my-path-mapping/app/views/addresses/_form.html.erb
+++ b/my-path-mapping/app/views/addresses/_form.html.erb
@@ -1,12 +1,9 @@
-<div class="wrapper">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-4">
+<div class="wrapper flex-center">
 
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-8">
-        <div class="panel panel-default">
-          <div class="panel-heading">Create a new address</div>
+      <div class="col-xs-12 col-sm-6 col-md-8 debug ">
+        <h1 class="panel-heading ta-cen">Add Address</h1>
+
+
 <%= form_for(@address) do |f| %>
   <% if @address.errors.any? %>
     <div id="error_explanation">
@@ -31,13 +28,14 @@
   <div class="field">
     <%= f.label :entity_type %><br>
     <%= f.text_field :entity_type, :class => 'form-control' %>
-  </div>
+  </div><br>
   <div class="actions">
     <%= f.submit :class => 'btn btn-default'%>
+    <%= link_to 'Back', root_path, :class => 'btn btn-default' %>
+
+  <p id="notice"><%= notice %></p>
   </div>
 <% end %>
-</div>
-</div>
 </div>
 </div>
 </div>
