--- a/my-path-mapping/app/views/zones/_form.html.erb
+++ b/my-path-mapping/app/views/zones/_form.html.erb
@@ -30,7 +30,7 @@
             </div>
             <div class="actions">
               <%= f.submit :class => 'btn btn-default'%>
-              <%= link_to 'Back', addresses_path, :class => 'btn btn-default' %>
+              <%= link_to 'Back', root_path, :class => 'btn btn-default' %>
             </div>
           </div>
 
