--- a/my-path-mapping/app/views/maps/index.html.erb
+++ b/my-path-mapping/app/views/maps/index.html.erb
@@ -15,10 +15,10 @@
 
   #map {
     position:absolute;
-    top:22%;
+    top:6em;
     bottom:0;
     width:100%;
-    height: 80%;
+    height: 93%;
   }
 </style>
 </head>
