--- a/my-path-mapping/app/views/layouts/application.html.erb
+++ b/my-path-mapping/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>MyPathMapping</title>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all'%>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -11,6 +11,7 @@
     <nav class="navbar navbar-default navbar-static-top bg-gray">
       <div class="page-header  flex-center">
         <a href="/"><img src="/assets/logo2.png"></a>
+        <%= link_to "Map", maps_path %>
      </div>
 
     </nav>
