--- a/my-path-mapping/app/views/zones/index.html.erb
+++ b/my-path-mapping/app/views/zones/index.html.erb
@@ -1,7 +1,14 @@
 <div class="wrapper debug">
 
-  <div class="span-12-d debug h-15 col bg-lgreen ta-cen">
-    <p>description</p>
+  <div class="span-12-d debug h-10 col  ta-cen flex-center">
+    <div class="debug span-3-d col h-3"></div>
+
+
+    <div class="debug span-6-d col bd-1g ">
+      <p class="fs-150">This is the description This is the descriptionThis is the descriptionThis is the descriptionThis is the descriptionThis is the descriptionThis is the descriptionThis is the descriptionThis is the descriptionThis is the description</p>
+    </div>
+
+    <div class="debug span-3-d col h-3"> </div>
   </div>
 
     <!-- start of listings -->
