--- a/my-path-mapping/app/assets/stylesheets/main.css.scss
+++ b/my-path-mapping/app/assets/stylesheets/main.css.scss
@@ -2,7 +2,7 @@
   // border: red 1px solid;
 }
 
-.debug {border: 1px red solid;}
+.debugx {border: 1px red solid;}
 .center {
    margin-left: auto;
    margin-right: auto;
@@ -51,6 +51,8 @@
 .bd-1w {border: 1px solid white;}
 .bd-1b {border: 1px solid black;}
 .bd-5w {border: 5px solid white;}
+.bd-1g {border: 1px solid #1C731B;}
+
 .br-5 {border-radius: 5px;}
 
 /*dimensions*/
