--- a/my-path-mapping/app/views/zones/index.html.erb
+++ b/my-path-mapping/app/views/zones/index.html.erb
@@ -8,21 +8,15 @@
       <p class="fs-150">This is the description This is the descriptionThis is the descriptionThis is the descriptionThis is the descriptionThis is the descriptionThis is the descriptionThis is the descriptionThis is the descriptionThis is the description</p>
     </div>
 
-    <div class="debug span-3-d col h-3"> </div>
+    <div class="debug span-3-d col h-3"></div>
   </div>
 
-<div class="debug span-11-d col mt-5 container">
+<div class="debug span-12-d col container">
   <%= link_to 'New Address', new_address_path, :class => "btn btn-primary btn-lg btn-block bg-green" %>
   <br>
   <%= link_to 'Maps', maps_path, :class => "btn btn-primary btn-lg btn-block bg-green" %>
 
 </div>
-
-
-
-
-
-
 
 </div>
 <!-- wrapper end -->
