--- a/my-path-mapping/app/views/addresses/_form.html.erb
+++ b/my-path-mapping/app/views/addresses/_form.html.erb
@@ -31,7 +31,7 @@
   </div><br>
   <div class="actions">
     <%= f.submit :class => 'btn btn-default'%>
-    <%= link_to 'Back', root_path, :class => 'btn btn-default' %>
+    <%= link_to 'Back', addresses_path, :class => 'btn btn-default' %>
 
   <p id="notice"><%= notice %></p>
   </div>
