--- a/my-path-mapping/app/assets/stylesheets/main.css.scss
+++ b/my-path-mapping/app/assets/stylesheets/main.css.scss
@@ -2,7 +2,7 @@
   // border: red 1px solid;
 }
 
-.debug {border: 1px red solid;}
+.debugx {border: 1px red solid;}
 .center {
    margin-left: auto;
    margin-right: auto;
@@ -14,7 +14,7 @@
 .z--15 {z-index: -15;}
 .z--20 {z-index: -20;}
 .z--25 {z-index: -25;}
-.z-15 {z-index: 15;
+.z-15 {z-index: 15;}
 .z-20 {z-index: 20;}
 .z-25 {z-index: 25;}
 .z-100 {z-index: 100;}
