--- a/my-path-mapping/app/views/zones/index.html.erb
+++ b/my-path-mapping/app/views/zones/index.html.erb
@@ -11,7 +11,7 @@
     <div class="debug span-3-d col h-3"></div>
   </div>
 
-<div class="debug span-12-d col container">
+<div class="debug span-12-d col container padt-5">
   <%= link_to 'New Address', new_address_path, :class => "btn btn-primary btn-lg btn-block bg-green" %>
   <br>
   <%= link_to 'Maps', maps_path, :class => "btn btn-primary btn-lg btn-block bg-green" %>
