--- a/my-path-mapping/app/views/layouts/application.html.erb
+++ b/my-path-mapping/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           <ul class="nav navbar-nav">
           <li><%= link_to "Map", maps_path, :class => "testing" %></li>
           <li><%= link_to "New Address", new_address_path %></li>
-          <li><%= link_to "", maps_path %></li>
+          <li><%= link_to "All Address", addresses_path %></li>
         </ul>
       </div>
 
