--- a/my-path-mapping/app/views/zones/index.html.erb
+++ b/my-path-mapping/app/views/zones/index.html.erb
@@ -5,7 +5,7 @@
 
 
     <div class="debug span-6-d col bd-1g pad-3">
-      <p class="fs-150">The purpose of this app allows young people to map the different types of financial services (both predatory services and quality financial services) while overlaying the racial/ethnic and socio economic demographic information in order to shed light on the lack of quality financial access in low income communities and communities of color.</p>
+      <p class="fs-150">We empower youth advocates to map the different types of financial services, both predatory services and quality financial services, while overlaying the racial/ethnic and socio economic demographic information in order to shed light on the lack of quality financial access in low income communities and communities of color.</p>
     </div>
 
     <div class="debug span-3-d col h-3"></div>
